--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 <footer>
   <section class="container">
     <div class="logoSocials">
-      <img src="/assets/logo.png" alt="Logo">
+      <a href="#"><img src="/assets/logo.png" alt="Logo"></a>
       <h5>
         <i class="fa-solid fa-envelope"></i> billrodrigo94@gmail.com
       </h5>
