fixed more css again

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="container">
       <div class="hero-wrapper">
         <h1 class="hero-header">
-          <span class="hOne">We Design <span class="brandWebsite brand">Brands </span> & Build <Websites class="brandWebsite website">Websites</span></span><br>
+          <span class="hOne">We Design <span class="brandWebsite brand">Brands </span><br>& Build <Websites class="brandWebsite website">Websites</span></span><br>
           That Wow! ...Simple As That
         </h1>
         <div class="benefits">
