added a <br> in the benefits

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </h1>
         <div class="benefits">
           <ul>
-            <li><i class="fa-solid fa-circle-check"></i> Leave the tech complexities to us while you focus on what you do best</li>
+            <li><i class="fa-solid fa-circle-check"></i> Leave the tech complexities to us<br>while you focus on what you do best</li>
           </ul>
           <br>  
         </div>
